MGS-1269 BUGFIX fix mobile site navigation appearing behind notification banners

--- a/resources/scss/components/_component.notification.scss
+++ b/resources/scss/components/_component.notification.scss
@@ -1,5 +1,13 @@
 $notification_padding: 14px;
 
+/**
+ * 1. Notifications should display on top
+ */
+.notification-wrapper {
+  position: relative;
+  z-index: 9999; /* [1] */
+}
+
 .notification {
 
   /**
