--- a/resources/scss/components/_component.site-footer.scss
+++ b/resources/scss/components/_component.site-footer.scss
@@ -18,6 +18,7 @@ html, body {
   height: 100%;
   margin: 0 auto;
   margin-bottom: -$site-footer-height;
+  position: relative;
 }
 
 .push {
